content/products/bootware/1.3.0/image-files/index.md
---
title: "1.3.0 Image Files"
linkTitle: "1.3.0 Image Files" 
description: "Links to pre-prepared download image files and keys"
lastmod: "2025-10-15"
aliases:
    - /bootware/image-files/
draft: false
images: []
weight: 70
toc: true
---

-----
### Bootware 1.3.0 General Platform Support Image files available for download

Example images all have the hostname of zymbit-dev and a login of zymbit and a password of zymbit. Please change if using for anything other than development examples.

| Item | Size | Description | 
|------|------|--------------------------|
| [zymbit_bookworm64_1.3.0.zi](https://bootware.s3.amazonaws.com/1.3/zymbit_bookworm64_1.3.0.zi) | 1.0 GB | Base Bookworm 64bit zi image (bw 1.3.0-1) |
| [zymbit_bullseye64_1.3.0.zi](https://bootware.s3.amazonaws.com/1.3/zymbit_bullseye64_1.3.0.zi) | 728 MB | Base Bullseye 64bit zi image (bw 1.3.0-1)  |
| [zymbit_ubuntu64_22.04_1.3.0.zi](https://bootware.s3.amazonaws.com/1.3/zymbit_ubuntu64_22.04_1.3.0.zi) | 1.7 GB | Base Ubuntu 22.04 64bit zi image  (bw 1.3.0-1)  |
| [zymbit_bookworm64_pi5_1.3.0.zi](https://bootware.s3.amazonaws.com/1.3/zymbit_bookworm64_pi5_1.3.0.zi) | 1.0 GB | Base Bookworm 64bit zi image for Pi5/CM5 (bw 1.3.0-1) |
| [pub_key_1.3.pem](https://bootware.s3.amazonaws.com/1.3/pub_key_1.3.pem) | | Public Key - For all Bootware 1.3 zi images |

-----

#### Bootware 1.2.2 General Platform Support Image files available for download

Example images all have the hostname of zymbit-dev and a login of zymbit and a password of zymbit. Please change if using for anything other than development examples.

> NOTE: 1.3.0 requires additional signature information that is not present in 1.2.2 and earlier zi images. Signature verification of 1.2.2 and earlier images will fail verification in zboot 1.3.0. Run `zbcli imager` to create new images if moving your existing 1.2.2 zi images to 1.3.0. See [1.3.0 upgrade](../troubleshooting/#release-130-1)

| Item | Size | Description | 
|------|------|--------------------------|
| [zymbit_bookworm64_1.2.2.zi](https://bootware.s3.amazonaws.com/1.2/zymbit_bookworm64_1.2.2.zi) | 1.0 GB | Base Bookworm 64bit zi image (bw 1.2.2-1) |
| [zymbit_bullseye64_1.2.2.zi](https://bootware.s3.amazonaws.com/1.2/zymbit_bullseye64_1.2.2.zi) | 727 MB | Base Bullseye 64bit zi image (bw 1.2.2-1)  |
| [zymbit_ubuntu64_22.04_1.2.2.zi](https://bootware.s3.amazonaws.com/1.2/zymbit_ubuntu64_22.04_1.2.2.zi) | 1.7 GB | Base Ubuntu 22.04 64bit zi image  (bw 1.2.2-1)  |
| [pub_key_1.2.pem](https://bootware.s3.amazonaws.com/1.2/pub_key_1.2.pem) | | Public Key - For all Bootware 1.2.2 zi images |

-----

#### Older revision Bootware 1.2. Image files available for download

| Item | Size | Description | 
|------|------|--------------------------|
| [zymbit_bookworm64_1.2.zi](https://bootware.s3.amazonaws.com/1.2/zymbit_bookworm64_1.2.zi) | 1.2 GB | Base Bookworm 64bit zi image (bw 1.2.0-28) |
| [zymbit_bullseye64_1.2.zi](https://bootware.s3.amazonaws.com/1.2/zymbit_bullseye64_1.2.zi) | 796 MB | Base Bullseye 64bit zi image (bw 1.2.0-28)  |
| [zymbit_ubuntu64_22.04_1.2.zi](https://bootware.s3.amazonaws.com/1.2/zymbit_ubuntu64_22.04_1.2.zi) | 2.1 GB | Base Ubuntu 22.04 64bit zi image  (bw 1.2.0-28)  |
| [zymbit_bookworm64_pi5_1.2.zi](https://bootware.s3.amazonaws.com/1.2/zymbit_bookworm64_pi5_1.2.zi) | 965 MB | Base Bookworm 64bit zi image for Pi5 (bw 1.2.0-28) |
| [pub_key_1.2.pem](https://bootware.s3.amazonaws.com/1.2/pub_key_1.2.pem) | | Public Key - For all Bootware 1.2 zi images |

-----


